--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 		  <artifactId>framework</artifactId>
 		  <version>1.0.0</version>
 		</dependency>
+		<dependency>
+		  <groupId>com.jason</groupId>
+		  <artifactId>security</artifactId>
+		  <version>1.0.0</version>
+		</dependency>
 
 		<!-- Servlet jsp jstl -->
 		<dependency>
@@ -58,33 +63,6 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-
-		<!-- shiro dependency -->
-        <dependency>
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-core</artifactId>
-            <version>${org.apache.shiro-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-web</artifactId>
-            <version>${org.apache.shiro-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-spring</artifactId>
-            <version>${org.apache.shiro-version}</version>
-        </dependency>
-        <dependency>
-		    <groupId>org.apache.shiro</groupId>
-		    <artifactId>shiro-ehcache</artifactId>
-		    <version>${org.apache.shiro-version}</version>
-		</dependency>
-		<dependency>
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-cas</artifactId>
-            <version>${org.apache.shiro-version}</version>
-        </dependency>
 
 		<!-- Test -->
 		<dependency>
@@ -221,6 +199,7 @@
 				<artifactId>maven-jetty-plugin</artifactId>
 				<version>6.1.10</version>
 				<configuration>
+				    <contextPath>/</contextPath>
 					<scanIntervalSeconds>0</scanIntervalSeconds>
 					<stopKey>foo</stopKey>
 					<stopPort>9999</stopPort>
