--- a/src/main/resources/META-INF/config.test/application.properties
+++ b/src/main/resources/META-INF/config.test/application.properties
@@ -1,6 +1,6 @@
 #jdbc settings
 
-jdbc.url=jdbc:mysql://localhost:3306/jason-blog?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://localhost:3306/jason_sso?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=123456
 
@@ -10,5 +10,5 @@ hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.cache.provider_class=org.hibernate.cache.EhCacheProvider
 hibernate.show_sql=true
 hibernate.format_sql=false
-hibernate.ehcache_config_file=/ehcache-hibernate.xml
+hibernate.ehcache_config_file=/META-INF/ehcache/ehcache-hibernate.xml
 hibernate.cache.use_query_cache=true
