--- a/src/main/resources/META-INF/config.dev/framework.properties
+++ b/src/main/resources/META-INF/config.dev/framework.properties
@@ -2,4 +2,4 @@ staticServer.domain=http://static.xiangrikui.com/
 photoServer.domain=http://localhost:8080/blog/
 
 sso.loginurlpre=http://sso.jasonsoso.com:9090
-sso.currurlpre=http://admin1.jasonsoso.com:8087
+sso.currurlpre=http://admin.jasonsoso.com:8087
